k8s/day15/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-app-routing-rule # name of rule 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # class name 
  rules:
  - host: ashutoshh.adhocnet.org 
    http:
      paths:
      - path: / # home page 
        pathType: Prefix
        backend:
          service:
            name: ashulb1
            port:
              number: 80
